[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Youtube_Police.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SFX_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/Police_001.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.1038
height = 61.9125

[sub_resource type="Animation" id=2]
resource_name = "Die_forward_001"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79 ]
}

[sub_resource type="Animation" id=12]
resource_name = "die_backwards_001"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 90, 91, 92, 93, 94, 95 ]
}

[sub_resource type="Animation" id=11]
resource_name = "die_forward_headshot"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 84, 85, 86, 87 ]
}

[sub_resource type="Animation" id=13]
resource_name = "die_headshot_backwards"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 96, 97, 98, 99, 100, 101, 102, 103 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_rifle"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "shooting_rifle"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("SFX_player")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_police_rifle"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_shooting"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_shot"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10.3345, 41.4158 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 14.9615, 41.5409 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 169.8, 16.595 )

[node name="Police" type="KinematicBody2D" groups=[
"enemy",
"police",
]]
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
hframes = 8
vframes = 20
frame = 104

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.12544, 5.37723 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 0.7
anims/Die_forward_001 = SubResource( 2 )
anims/die_backwards_001 = SubResource( 12 )
anims/die_forward_headshot = SubResource( 11 )
anims/die_headshot_backwards = SubResource( 13 )
anims/idle = SubResource( 3 )
anims/idle_rifle = SubResource( 4 )
anims/shooting_rifle = SubResource( 5 )
anims/walking_nothing = SubResource( 6 )
anims/walking_rifle = SubResource( 7 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.875351, 5.62732 )
shape = SubResource( 8 )

[node name="Turnpoint_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turnpoint_area"]
position = Vector2( -0.375153, 5.50227 )
shape = SubResource( 9 )

[node name="Detect_player_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_player_area"]
position = Vector2( 217.675, -10.5999 )
shape = SubResource( 10 )

[node name="SFX_player" parent="." instance=ExtResource( 2 )]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 46.2458, -10.3943 )
cast_to = Vector2( 345, 0 )
collision_mask = 524289
collide_with_areas = true
